# SSG

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
include/: distance.h  exceptions.h  index.h  index_random.h  index_ssg.h  neighbor.h  parameters.h  util.h
src/: CMakeLists.txt  index.cpp  index_random.cpp  index_ssg.cpp  python.cpp  util.cpp
tests/: CMakeLists.txt  test_python_query.py  test_ssg_index.cpp  test_ssg_optimized_search.cpp  test_ssg_optimized_search_deep100M.cpp
